# sstui

./: Cargo.toml  README.md
examples/: latest_release_download.rs  latest_release_proxy_download.rs  test.rs
src/: layer.rs  lib.rs  main.rs  sslocal.rs  userdata.rs
src/layer/: main.rs  main_layer.rs  messagebox.rs  messagebox_layer.rs  mod.rs  sslocal_manager_layer.rs
src/views/: mainview.rs  messagebox.rs  mod.rs  sslocal_download.rs  sslocal_update.rs  ssserver_import.rs
src/widgets/: message_box.rs  mod.rs  popup.rs
