[package]
name = "sstui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
base64 = "0.22.1"
ratatui = "0.28.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tar = "0.4.42"
ureq = { version = "2.10.1", features = ["json", "socks-proxy"] }
urlencoding = "2.1.3"
xz2 = "0.1.7"
zip = "2.2.0"
